tests/errors/compiler/wrong_struct_ass/warnings/struct_+=_int.c
struct str
{
	int field;
};

void main()
{
	struct str st;

	st += 1;
}
